--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "DotGothic16", sans-serif;
+  font-size: 16px;
 }
 
 body {
@@ -19,7 +20,7 @@ nav {
 ul {
   list-style: none;
   display: flex;
-  gap: 10px;
+  gap: 25px;
 }
 
 ul a {
