--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "DotGothic16", sans-serif;
-  font-size: 16px;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
 }
 
 body {
@@ -12,19 +12,46 @@ body {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: #f4bfc4;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 0 16px 10px -18px #f062e9;
 }
 
 ul {
   list-style: none;
   display: flex;
-  gap: 25px;
+  align-items: center;
+  gap: 20px;
+  margin-right: 50px;
+  justify-content: flex-end;
 }
 
 ul a {
   color: #fffefa;
   text-decoration: none;
+}
+
+.logo {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 35px;
+}
+
+a:hover {
+  color: #dd5180;
+  cursor: pointer;
+  padding: 0, 10px;
+  text-decoration: underline;
+}
+
+.nav__nucba {
+  background-color: #ee7974;
+  padding: 10px;
   font-weight: bold;
+  border-radius: 16px;
 }
