--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,18 @@ a:hover {
   border-radius: 16px;
 }
 
+/* main */
+
+main {
+  background: var(--background);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 100%;
+}
+
 /* hero */
 #hero {
   margin-top: 65px;
@@ -144,4 +156,59 @@ a:hover {
   width: 70%;
   color: var(--text-gray);
   text-align: center;
+}
+
+/* info cards*/
+
+#info {
+  padding: 70px 0;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 80px;
+  color: var(--text-gray);
+}
+
+#info h2 {
+  font-size: 32px;
+  font-weight: 800;
+  color: var(--text-gray);
+}
+
+.info-cards-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.info-card {
+  width: 300px;
+  height: 298px;
+  padding: 40px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: var(--secondary);
+  border-radius: 10px;
+  gap: 20px;
+}
+
+.info-card img {
+  width: 50px;
+}
+
+.info-card h3 {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.info-card p {
+  font-size: 14px;
+  font-weight: 300;
+  color: var(--text-gray);
 }
