--- a/assets/style.css
+++ b/assets/style.css
@@ -167,7 +167,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 80px;
+  gap: 50px;
   color: var(--text-gray);
 }
 
@@ -193,13 +193,13 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background: var(--secondary);
+  background: var(--nav-bg);
   border-radius: 10px;
   gap: 20px;
 }
 
 .info-card img {
-  width: 50px;
+  width: 40px;
 }
 
 .info-card h3 {
