--- a/assets/style.css
+++ b/assets/style.css
@@ -308,3 +308,67 @@ p {
   font-size: 12px;
   color: var(--text-white);
 }
+
+/* MEDIAQUERIES TABLET                             TABLET                               TABLET */
+@media (max-width: 992px) {
+  .navbar-list {
+    position: absolute;
+    top: 90px;
+    left: 50%;
+    right: 5%;
+    width: 100%;
+    flex-direction: column;
+    border: solid 1px;
+    border-radius: 0 0 15px 15px;
+    align-items: flex-start;
+    padding: 45px 30px;
+    gap: 25px;
+    z-index: 2;
+    display: none;
+  }
+  .navbar i {
+    display: block;
+  }
+
+  #toggle-menu:checked ~ .navbar-list {
+    display: flex;
+  }
+  .navbar {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .hero-info {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .hero-info h1 {
+    width: 90%;
+    font-size: 30px;
+  }
+  .hero-info p {
+    width: 100%;
+    max-width: 600px;
+  }
+
+  .hero-card {
+    display: none;
+  }
+
+  #description p {
+    padding: 0 25px;
+  }
+
+  .contact-map {
+    display: none;
+  }
+
+  .logo-redes {
+    display: flex;
+    justify-content: left;
+    padding: 12px 0;
+  }
+}
