media mobile test

--- a/assets/style.css
+++ b/assets/style.css
@@ -309,7 +309,7 @@ p {
   color: var(--text-white);
 }
 
-/* MEDIAQUERIES TABLET                             TABLET                               TABLET */
+/* MEDIAQUERIES TABLET */
 @media (max-width: 992px) {
   .navbar-list {
     position: absolute;
@@ -370,5 +370,92 @@ p {
     display: flex;
     justify-content: left;
     padding: 12px 0;
+  }
+}
+
+/* MEDIAQUERIES MOBILE */
+@media (max-width: 576px) {
+  .navbar-list {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 70%;
+    height: calc(30vh - 30px);
+    position: absolute;
+    top: 90px;
+    left: 50%;
+
+    padding: 0 0 0 30px;
+    border: solid 1px;
+    border-radius: 0 0 3px 3px;
+    gap: 25px;
+    display: none;
+  }
+
+  .navbar {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .navbar i {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+
+  #toggle-menu:checked ~ .navbar-list {
+    display: flex;
+  }
+
+  .cart {
+    left: 0;
+    width: 100%;
+
+    border-radius: 0;
+  }
+
+  .cart.item {
+    flex-wrap: wrap;
+  }
+
+  .footer-contact {
+    flex-wrap: wrap;
+    gap: 25px;
+  }
+
+  .logo-redes {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+  }
+  iframe {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  #hero {
+    width: 100%;
+  }
+  .hero-info h1 {
+    min-width: 300px;
+  }
+
+  .botones {
+    gap: 20px;
+  }
+
+  .footer-1 h2 {
+    padding: 0 30px;
+  }
+
+  iframe {
+    max-width: 250px;
+  }
+  .info-cards-container {
+    gap: 30px 0;
+  }
+
+  #info {
+    gap: 30px 0;
   }
 }
