--- a/assets/style.css
+++ b/assets/style.css
@@ -454,6 +454,11 @@ p {
   .info-cards-container {
     gap: 30px 0;
   }
+  .contact h2 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
 
   #info {
     gap: 30px 0;
