--- a/assets/style.css
+++ b/assets/style.css
@@ -377,7 +377,7 @@ p {
 @media (max-width: 576px) {
   .navbar-list {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     width: 70%;
     height: calc(30vh - 30px);
